--- a/forgot.html
+++ b/forgot.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Forgot Password</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <nav>
@@ -40,12 +40,11 @@
             </td>
           </tr>
         </table>
-        
-    <center>
-      <tr>
-        <input type="submit" />
-      </tr>
-    </center>
+        <center>
+          <tr>
+            <input type="submit" />
+          </tr>
+        </center>
       </form>
     </center>
     <br />
